[package]
name = "libechoexec"
version = "0.1.0"
authors = ["Jason Ozias <jason.ozias@kroger.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-preview = "=0.3.0-alpha.17"
tokio = { git = "https://github.com/tokio-rs/tokio" }
hyper = { git = "https://github.com/hyperium/hyper" }
