[package]
authors = ["Jason Ozias <jason.ozias@gmail.com>"]
description = "Echo Logger for Rust"
documentation = "http://docs.rs/libechoexec"
edition = "2018"
homepage = "http://docs.rs/libechoexec"
keywords = ["echo"]
license = "MIT/Apache-2.0"
name = "libechoexec"
readme = "README.md"
repository = "https://github.com/rustyhorde/libechoexec"
version = "0.1.0"

[dependencies]
futures = "0"
getset = "0"
hyper = "0"
hyper-tls = "0"
lazy_static = "1"
native-tls = "0"
serde = "1"
serde_derive = "1"
serde_json = "1"
slog = { version = "2", features = [ "max_level_trace" ] }
slog-try = "0"
tokio = { version = "0", features = [ "full" ] }
uuid = { version = "0", features = [ "serde", "v4" ] }

[dev-dependencies]
chrono = { version = "0", features = [ "serde" ] }
slog-term = "2"
slog-async = "2"
